--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ packages = [
 python = "^3.11"
 requests = "^2.31.0"
 questionary = "^1.10.0"
+pydantic = "^1.10.9"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
