--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,10 @@ python = "^3.11"
 requests = "^2.31.0"
 questionary = "^1.10.0"
 pydantic = "^1.10.9"
+tabulate = "^0.9.0"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^7.3.1"
+pytest-cov = "^4.1.0"
 
 [tool.poetry.scripts]
 weatherboy = "weatherboy.cli:entrypoint"
