--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ description = ""
 authors = ["Team Autopyte"]
 readme = "README.md"
 packages = [
-    {include="weatherboy", from="src"}
+    { include = "weatherboy", from = "src" }
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "~3.11"
 requests = "^2.31.0"
 questionary = "^1.10.0"
 pydantic = "^1.10.9"
@@ -17,6 +17,9 @@ tabulate = "^0.9.0"
 
 [tool.poetry.group.test.dependencies]
 pytest-cov = "^4.1.0"
+
+[tool.poetry.group.dev.dependencies]
+auto-py-to-exe = "^2.36.0"
 
 [tool.poetry.scripts]
 weatherboy = "weatherboy.cli:entrypoint"
